--- a/todo.txt
+++ b/todo.txt
@@ -1,10 +1,3 @@
-*get item script
-*add to item collection
-    -> get items script
-    -> add to vendor script
-*remove item from items
-*remove item from container 
-*remove container
-*grab item script copy
-*more items support
-*item qty and types are stored 2x?
+
+-> get item script copied msg
+-> throttle requests to outlands
